feat: add choose function

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,12 @@
 body {
   background-color: #152938;
 }
+
+@keyframes ballRotation {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
